[package]
name = "kuzya_project"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10" #Для AES-GSM шифрования
rand = "0.8" #для генерации случайных ключей
hex = "0.4" #для удобной работы с байтами
ratatui = "0.26"
crossterm = "0.27" # Для работы с терминалом (клавиши, цвета)
